1、提交用户交互登录、注册接口

--- a/doc/接口参数描述文档/手工艺接口.md
+++ b/doc/接口参数描述文档/手工艺接口.md
@@ -226,3 +226,45 @@
 | code | 441 | Integer | 失败状态码 |
 | msg | The verification code is invalid | String | 响应的消息 |
 | data | null | Null | 数据 |
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 失败状态码 |
+| msg | error | String | 响应的消息 |
+| data | null | Null | 数据 |
+
+```javascript
+{
+	"code": 440,
+	"msg": "The verification code is incorrect",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 440 | Integer | 失败状态码 |
+| msg | The verification code is incorrect | String | 响应的消息 |
+| data | null | Null | 数据 |
+
+```javascript
+{
+	"code": 4001001,
+	"msg": "Wrong username or password",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 4001001 | Integer | 失败状态码 |
+| msg | Wrong username or password" | String | 响应的消息 |
+| data | null | Null | 数据 |
