提交接口信息

--- a/doc/接口参数描述文档/手工艺接口.md
+++ b/doc/接口参数描述文档/手工艺接口.md
@@ -268,3 +268,402 @@
 | code | 4001001 | Integer | 失败状态码 |
 | msg | Wrong username or password" | String | 响应的消息 |
 | data | null | Null | 数据 |
+
+
+## /手工艺接口/用户交互/退出
+
+```text
+- 退出操作
+    - 前置操作
+        - 需要在登录接口在线的时候
+        - 需要在Header字段上面添加Authorization字段添加上token
+    - 后置操作
+        - 无
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/logout
+
+#### 请求方式
+
+> GET
+
+#### Content-Type
+
+> none
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzYwOTMsInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.gfewqDE-gIj3eoa4ZmolvcgDCpwosTmtuglDtlZNt64 | String | 是 | - |
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+## /手工艺接口/用户交互/修改当前密码
+
+```text
+- 修改当前用户密码
+    - 前置操作
+        - 需要在Header字段上面添加Authorization字段添加上token
+    - 后置操作
+        - 退出重新登录（可选的）
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/updatePassword
+
+#### 请求方式
+
+> POST
+
+#### Content-Type
+
+> urlencoded
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzYwOTMsInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.gfewqDE-gIj3eoa4ZmolvcgDCpwosTmtuglDtlZNt64 | String | 是 | - |
+
+#### 请求Body参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| password | 123456 | String | 是 | 原来的密码 |
+| newPassword | new123456 | String | 是 | 新密码 |
+
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+#### 错误响应示例
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 状态码 |
+| msg | error | String | 消息 |
+| data | null | Null | 数据 |
+
+## /手工艺接口/用户交互/充值
+
+```text
+- 管理员-重置密码
+    - 前置操作
+        - 需要在Header字段上面添加Authorization字段添加上token
+    - 后置操作
+        - 无
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/recharge
+
+#### 请求方式
+
+> POST
+
+#### Content-Type
+
+> urlencoded
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzgwMDksInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.ev_Siii1UVBZYxkMH9HVTiV21p40hnqWXbDyxj7pqMM | String | 是 | - |
+
+#### 请求Body参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| userId | 2 | String | 是 | 用户主键id |
+| coinNum | 100 | String | 是 | - |
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+#### 错误响应示例
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 状态码 |
+| msg | error | String | 消息 |
+| data | null | Null | 数据 |
+
+## /手工艺接口/用户信息管理
+
+### /手工艺接口/用户信息管理/管理员-重置密码
+
+```text
+- 管理员-重置密码
+    - 前置操作
+        - 需要在Header字段上面添加Authorization字段添加上tok
+    - 后置操作
+        - 更新密码至默认密码123456
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/resetPassword
+
+#### 请求方式
+
+> POST
+
+#### Content-Type
+
+> none
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzgwMDksInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.ev_Siii1UVBZYxkMH9HVTiV21p40hnqWXbDyxj7pqMM | String | 是 | - |
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+#### 错误响应示例
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 状态码 |
+| msg | error | String | 消息 |
+| data | null | Null | 数据 |
+
+## /手工艺接口/用户信息管理/管理员-冻结用户
+
+```text
+- 管理员-重置密码
+    - 前置操作
+        - 需要在Header字段上面添加Authorization字段添加上token
+    - 后置操作
+        - 
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/freezeUser
+
+#### 请求方式
+
+> POST
+
+#### Content-Type
+
+> urlencoded
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzgwMDksInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.ev_Siii1UVBZYxkMH9HVTiV21p40hnqWXbDyxj7pqMM | String | 是 | - |
+
+#### 请求Body参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| userId | 2 | String | 是 | 用户主键id |
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+#### 错误响应示例
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 状态码 |
+| msg | error | String | 消息 |
+| data | null | Null | 数据 |
+
+## /手工艺接口/用户信息管理/管理员-解冻用户
+
+```text
+- 管理员-重置密码
+    - 前置操作
+        - 需要在Header字段上面添加Authorization字段添加上token
+    - 后置操作
+        - 无
+```
+
+#### 接口状态
+
+> 开发中
+
+#### 接口URL
+
+> http://localhost:8081/user/identity/unfreezeUser
+
+#### 请求方式
+
+> POST
+
+#### Content-Type
+
+> urlencoded
+
+#### 请求Header参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU0MzgwMDksInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.ev_Siii1UVBZYxkMH9HVTiV21p40hnqWXbDyxj7pqMM | String | 是 | - |
+
+#### 请求Body参数
+
+| 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
+| --- | --- | ---- | ---- | ---- |
+| userId | 2 | String | 是 | 用户主键id |
+
+#### 成功响应示例
+
+```javascript
+{
+	"code": 200,
+	"msg": "ok",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 200 | Integer | 状态码 |
+| msg | ok | String | 消息 |
+| data | null | Null | 数据 |
+
+#### 错误响应示例
+
+```javascript
+{
+	"code": 110,
+	"msg": "error",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 110 | Integer | 状态码 |
+| msg | error | String | 消息 |
+| data | null | Null | 数据 |
