修改用户注册接口，并添加校验机制

--- a/doc/接口参数描述文档/手工艺接口.md
+++ b/doc/接口参数描述文档/手工艺接口.md
@@ -84,12 +84,17 @@
 
 > urlencoded
 
+
 #### 请求Body参数
 
 | 参数名 | 示例值 | 参数类型 | 是否必填 | 参数描述 |
 | --- | --- | ---- | ---- | ---- |
 | username | test2 | String | 是 | 用户名 |
 | password | 123456 | String | 是 | 密码 |
+| email | 123123@qq.com | String | 是 | 邮箱 |
+| sex | man | String | 否 | 性别 |
+| country | 中国 | String | 否 | 国家 |
+| pic | - | String | 否 | 头像 |
 
 #### 成功响应示例
 
@@ -121,6 +126,34 @@
 | --- | --- | ---- | ---- |
 | code | 110 | Integer | 失败状态码 |
 | msg | error | String | 响应的消息 |
+| data | null | Null | 数据 |
+
+```javascript
+{
+	"code": 442,
+	"msg": "The username cannot be duplicated",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 442 | Integer | 失败状态码 |
+| msg | The username cannot be duplicated | String | 响应的消息 |
+| data | null | Null | 数据 |
+
+```javascript
+{
+	"code": 442,
+	"msg": "The username cannot be duplicated",
+	"data": null
+}
+```
+
+| 参数名 | 示例值 | 参数类型 | 参数描述 |
+| --- | --- | ---- | ---- |
+| code | 442 | Integer | 失败状态码 |
+| msg | The username cannot be duplicated | String | 响应的消息 |
 | data | null | Null | 数据 |
 
 ## /手工艺接口/用户交互/用户登录
