翻译接口文档

--- a/doc/接口参数描述文档/手工艺接口.md
+++ b/doc/接口参数描述文档/手工艺接口.md
@@ -3203,11 +3203,11 @@
 | --- | --- | ---- | ---- | ---- |
 | Authorization | eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MTU2MTM0MDksInVzZXJJZCI6MSwidXNlcm5hbWUiOiJ0ZXN0MSJ9.2EAkCP5-L0ICmUEi1JTU6Tj90q_vCgnGw8UPFxeV0Vw | String | 是 | - |
 
-#### 请求Body参数
+#### body 매개 변수 요청
 
 | 매개변수 이름 | 예제 값 | 매개변수 유형 | 필수 여부 | 매개변수 설명 |
 | --- | --- | ---- | ---- | ---- |
-| file | ["E:\\httpclient-4.3.1.jar"] | String | 是 | - |
+| file | ["E:\\httpclient-4.3.1.jar"] | String | 예 | - |
 
 
 
