增减该查，添加category分类

--- a/doc/接口参数描述文档/手工艺接口.md
+++ b/doc/接口参数描述文档/手工艺接口.md
@@ -525,6 +525,7 @@
 | cover | imgs/123123123.jpg | String | 예 | 아바타 |
 | videoUrl | imgs/123123213.mp4 | String | 예 | 비디오 |
 | tags | 标签1,标签2,标签3 | String | 예 | 레이블 목록 |
+| category | a | String | 예 | 분류 |
 | attachmentUrls | imgs/123123213.mp4,imgs/123123211233.mp4 | Array | 예 | 첨부 파일 |
 
 #### 성공 응답 예제
@@ -593,6 +594,7 @@
 | cover | imgs/2345234.jpg | String | 아니오 | 아바타 |
 | videoUrl | imgs/23452345.mp4 | String | 아니오 | 비디오 |
 | tags | 标签1,标签2,标签3,标签4 | String | 아니오 | 레이블 목록 |
+| category | a | String | 예 | 분류 |
 | attachmentUrls | imgs/123123213.mp4,imgs/123123211233.mp4,imgs/123123211233.mp4 | Array | 아니오 | 첨부 파일 |
 #### 성공 응답 예제
 
@@ -669,6 +671,7 @@
 | --- | --- | ---- | ---- | ---- |
 | title | 23 | String | 否 | 게시물 제목, 모호하게 검색 가능 |
 | status | publish | String | 예 | 상태 |
+| category | a | String | 선택 사항 | 분류 |
 | userId | 1 | String | 否 | 用户id，개인 게시물의 조회 데이터를 만들 수 있습니다. |
 
 #### 성공 응답 예제
@@ -689,6 +692,7 @@
 				"tags": "标签1,标签2,标签3,标签4",
 				"userId": null,
 				"username": null,
+				"category": "a",
 				"createTime": "2024-05-13 15:16:16",
 				"updateTime": "2024-05-13 15:16:16",
 				"postAttachments": [
@@ -749,6 +753,7 @@
 | data.list.title | 帖子标修改123 | String | 게시물 제목 |
 | data.list.content | 帖子内容修改123 | String | 게시물 내용, html 태그 문자열 작성 가능 |
 | data.list.cover | imgs/2345234.jpg | String | 아바타 |
+| data.list.category | a | String | 분류 |
 | data.list.videoUrl | imgs/23452345.mp4 | String | 비디오 |
 | data.list.tags | 标签1,标签2,标签3,标签4 | String | 레이블 목록 |
 | data.list.userId | null | Null | 사용자 id |
